# generic_embedded_libs

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  SConscript  SConstruct  gel_conf_template.h  test.c
gel/: gel_internal_conf.h
gel/circular_event_log/: circular_event_log.c  circular_event_log.h
gel/collections/: circular_buffer.c  circular_buffer.h  queue.h  stack.h
gel/crc/: crc16-ccitt.c  crc16-ccitt.h  crc32.c  crc32.h
gel/data_structures/: maybe.h  struct_update.c  struct_update.h  watcher.c  watcher.h
gel/debounce/: debounce.c  debounce.h  pulsecounter.c  pulsecounter.h
gel/keyboard/: keyboard.c  keyboard.h
gel/keypad/: keypad.c  keypad.h
gel/pagemanager/: page_manager.c  page_manager.h
gel/parameter/: parameter.c  parameter.h  struct_update.c  struct_update.h
gel/pid/: pid.c  pid.h
gel/scheduler/: scheduler.c  scheduler.h
gel/serializer/: serializer.h
gel/state_machine/: state_machine.h
gel/timer/: stopwatch.c  stopwatch.h  timecheck.h  timer.c  timer.h
gel/watcher/: watcher.c  watcher.h
gel/wearleveling/: wearleveling.c  wearleveling.h
generic/circularbuffer/: circular_buffer.c  circular_buffer.h
generic/collections/: circular_buffer.h  listx.h  queue.h  stack.h
generic/debounce/: debounce.c  debounce.h  pulsecounter.c  pulsecounter.h
generic/keyboard/: keyboard.c  keyboard.h
generic/pagemanager/: page_manager.c  page_manager.h  pman_conf_template.h
generic/parameter/: parameter.c  parameter.h
generic/pid/: pid.c  pid.h  pid_conf_template.h
generic/queue/: queue.h
generic/serializer/: serializer.h
generic/timer/: generic_timer.c  generic_timer.h  timecheck.h
generic/watcher/: watcher.c  watcher.h
test/: SConstruct  gel_conf.h  pid_conf.h  pman_conf.h  testsuite
test/circular_event_log/: circular_event_log_test.c
test/circularbuffer/: TestCircularBuffer  TestCircularBuffer1.c  TestCircularBuffer1_Runner.c  TestCircularBuffer_Runner.c  circular_buffer_test.c  macro_queue_test.c
test/collections/: circular_buffer_test.c  macro_queue_test.c
test/data_structures/: maybe_test.c  struct_update_test.c  watcher_test.c
test/debounce/: digin_test  digin_test.c  digin_test_Runner.c  (+3 more)
(+20 files in other folders)
